@@ -1,2 +1,2 @@
-FAILED: Parse Error: line 1:20 mismatched input '-' expecting EOF
+FAILED: Parse Error: line 1:20 cannot recognize input '-' in create statement
 
