@@ -1,7 +1,7 @@
 query: EXPLAIN
 CREATE TABLE INPUTDDL1(key INT, value STRING) STORED AS TEXTFILE
 ABSTRACT SYNTAX TREE:
-  (TOK_CREATETABLE INPUTDDL1 (TOK_TABCOLLIST (TOK_TABCOL key TOK_INT) (TOK_TABCOL value TOK_STRING)) TOK_TBLTEXTFILE)
+  (TOK_CREATETABLE INPUTDDL1 TOK_LIKETABLE (TOK_TABCOLLIST (TOK_TABCOL key TOK_INT) (TOK_TABCOL value TOK_STRING)) TOK_TBLTEXTFILE)
 
 STAGE DEPENDENCIES:
   Stage-0 is a root stage
@@ -22,5 +22,5 @@ STAGE PLANS:
 query: CREATE TABLE INPUTDDL1(key INT, value STRING) STORED AS TEXTFILE
 query: SELECT INPUTDDL1.* from INPUTDDL1
 Input: default/inputddl1
-Output: /data/users/athusoo/commits/hive_trunk_ws8/ql/../build/ql/tmp/41830805/37982921.10000
+Output: file:/data/users/zshao/tools/495-trunk-apache-hive/build/ql/tmp/2140332227/10000
 query: DROP TABLE INPUTDDL1
